[package]
name = "rustibia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
ndarray = "0.15.6"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "battle_list"
harness = false

[[bench]]
name = "status_bar"
harness = false
